fix alignments issues

--- a/themes/bansuri/sass/custom/_footer.scss
+++ b/themes/bansuri/sass/custom/_footer.scss
@@ -16,7 +16,7 @@
 			white-space: nowrap;
 			padding-left: 20px;
 			padding-right: 15px;
-			font: 10px;
+			font: 10px Georgia, "Times New Roman", Times, serif;
 			letter-spacing: 2px;
 			text-align: center;
 			text-transform: uppercase;
